# qfinbox

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Dockerfile.dev  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml  dependencies.yml  publish.yml  quality.yml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  tutorial.rst
docs/_static/: .gitkeep
docs/api/: index.rst  modules.rst  tvm.rst
docs/examples/: index.rst  monte_carlo.rst  portfolio_optimization.rst  risk_management.rst
scripts/: dev.bat  dev.sh  docker.sh  setup_dev.bat  setup_dev.sh
src/qfinbox/: __init__.py  _version.py
src/qfinbox/core/: __init__.py  exceptions.py  utils.py  validators.py
src/qfinbox/tvm/: __init__.py  annuities.py  basic.py  bonds.py  cashflow.py  loans.py
tests/: __init__.py  test_basic.py  test_tvm.py
